--- a/index.html
+++ b/index.html
@@ -7,26 +7,30 @@ body{
 background-image: url('https://i.pinimg.com/originals/29/5d/b0/295db05185d1dc2fa04dbd7f2d75126c.jpg');
   background-repeat: no-repeat;
   background-size: cover;
-opacity:0.9;
+  opacity:0.9;
+ overflow-x:hidden;
 
 
 }
-	.gsc-input-box{ 
+.gsc-input-box{ 
 	color:black; 
-	width: 90%;
+	width: 80%;
       	height: 25px;
 	radius:3px;
-	margin-left:120px;
+	margin-left:10px;
+margin-right:10px;
       	border: auto;
       	border-radius: 10px;
   	box-shadow: 1px 1px 3px #000000;
 	
 }
-.gsc-search-button, gsc-search-button-v2
+.gsc-search-button.gsc-search-button-v2
 {
 	border-radius: 8px;
 	margin-right:100px;
-	height:30px;
+	height:36px;
+	width:75px;
+
 	border:auto
 }
 svg{
@@ -47,7 +51,7 @@ background-color: #f6f6f6;
 
 #___gcse_0{
 width:100%;
-margin-left:1%;
+margin-left:2%;
 backgorund-color:blue;
 }
 
