--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ background-image: url('https://wallpaper.dog/large/11032562.jpg');
 }
 .gsc-input-box{ 
 	color:black; 
-	width: 80%;
+	width: 95%;
       	height: 25px;
 	radius:3px;
 	margin-left:10px;
@@ -46,7 +46,7 @@ text-shadow: 1px 1px 1px #000000;
 margin-top:-20px;
 border-color:transparent;
 alignment:center;
-background-color: #f6f6f6;
+background-color:transparent;
 }
 
 #___gcse_0{
