--- a/index.html
+++ b/index.html
@@ -54,16 +54,39 @@ width:106%;
 margin-left:-3px;
 backgorund-color:blue;
 }
+#speechtotext{
+margin-left: 50%;
+margin-bottom: -17px;
+}
 
 </style>
-<head>
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
 
 
 
 <body>
 <div1>
+
 </div1>
+<i class="fa fa-microphone" id="speechtotext" onclick="record()" style="font-size:40px;color:#683522;text-shadow:2px 2px 4px #000000;"></i>
 <script async src="https://cse.google.com/cse.js?cx=7f92af3eb52014e30"></script>
+
+<script>
+function record(){
+var recognition = new webkitSpeechRecognition();
+recognition.lang = "en-GB";
+recognition.onresult = function(event)
+{
+document.getElementById('gsc-i-id1').value=event.results[0][0].transcript;
+}
+recognition.start();
+}
+</script>
+
+
+
 <div class="gcse-search"></div>
 <div2>
 
