--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@ margin-bottom: -17px;
   margin-left:40%;
   margin-right:50%;
   margin-top:8%;
-  width: 20%;
+   width: 40%;
+  height: auto;
 
 position:fixed;
 z-index: -1; 
