--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@ margin-bottom: -17px;
   
 #hii{
   display: block;
-  margin-left:40%;
+  margin-left:20%;
   margin-right:50%;
-  margin-top:8%;
-   width: 40%;
+  margin-top:40vh;
+   width: 50%;
   height: auto;
 
 position:fixed;
